first prod version

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@turf/line-intersect": "^5.0.3",
     "@turf/point-to-line-distance": "^5.0.0",
     "install": "^0.10.1",
+    "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.2.0",
+    "moment": "^2.19.2",
     "point-on-line": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
